<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:minHeight="250dp"
    tools:context="com.kaizensoftware.students.activity.student.cr.StudentsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/create_student_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/register_title"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/rePasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ageTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/ageSR"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/genderTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male_gender" />

                <RadioButton
                    android:id="@+id/femaleRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female_gender" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="createStudent"
            android:text="Crear"
            android:textAllCaps="false" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>